--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,7 +33,6 @@ a {
     align-items: center;
     padding: 8px 17px;
     gap: 12px;
-    min-width: 166px;
     border-radius: 999px;
     border: 1px solid #C31414;
     font-size: 2rem;
@@ -96,6 +95,7 @@ a {
     border: 1px solid #EAEAEA;
     padding: 5px 10px;
     border-radius: 10px;
+    position: relative;
 }
 
 .language--block img:first-child {
@@ -109,12 +109,59 @@ a {
     font-weight: 500;
     line-height: 1.82rem;
     text-align: center;
+    color: #000;
+}
+
+/* language switch */
+.dropdown {
+    user-select: none;
+}
+
+.dropdown--list {
+    position: absolute;
+    border-radius: 10px;
+    border: 1px solid #EAEAEA;
+    padding: 5px 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.332);
+    z-index: 99;
+    background: #FFF;
+    width: 168px;
+    display: none;
+}
+
+.dropdown--list-open {
+    display: block;
+}
+
+.selected {
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.82rem;
+    text-align: center;
+}
+
+.dropdown--item {
+    padding: 5px 0;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 14px;
+}
+
+.dropdown--item img {
+    width: 28px;
+    height: 28px;
+    object-fit: cover;
 }
 
 /*================= Hero =================*/
 .hero {
     padding-top: 190px;
     position: relative;
+}
+
+.desc__desc {
+    text-align: justify;
 }
 
 .hero__bg--more {
@@ -1102,7 +1149,7 @@ a {
 }
 
 .object__item {
-    width: 21.8%;
+    width: 21.3%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -1119,6 +1166,10 @@ a {
     font-weight: 600;
     line-height: 3rem;
     text-align: center;
+}
+
+.object__item:nth-child(2) p {
+    width: 95%;
 }
 
 .object__item p:first-child span {
@@ -1415,7 +1466,8 @@ a {
 .footer__container--list {
     display: flex;
     justify-content: space-between;
-    gap: 46px;
+    gap: 67px;
+    margin-left: 30px;
 }
 
 .footer__st {
@@ -1425,12 +1477,24 @@ a {
 
 .footer__section {
     flex: 1;
-    /* Flex-grow */
-    padding: 0 30px;
-    /* Side padding */
-    min-width: 299px;
     z-index: 2;
     /* margin-right: 50px; */
+}
+
+.footer__section:first-child {
+    min-width: 317px;
+}
+
+.footer__section:nth-child(2) {
+    min-width: 223px;
+}
+
+.footer__section:nth-child(3) {
+    min-width: 233px;
+}
+
+.footer__section:last-child {
+    min-width: 300px;
 }
 
 .footer__logo {
@@ -1467,18 +1531,18 @@ a {
 }
 
 .footer__section ul li a {
-    font-family: Manrope;
-    font-size: 14px;
-    font-weight: 400;
-    color: rgba(255, 255, 255, 0.6);
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.91rem;
+    text-align: left;
+    color: rgba(255, 255, 255);
     /* White text color */
-    text-decoration: none;
-    /* No underline */
 }
 
 .footer__section ul li a:hover {
     /* text-decoration: underline; Underline on hover */
-    color: #FFFFFF;
+    text-decoration: 1px underline #fff;
+    text-underline-position: under;
 }
 
 .footer__social {
@@ -1510,9 +1574,10 @@ a {
 }
 
 .footer__section .input-group {
-    position: relative;
     display: flex;
     align-items: center;
+    gap: 12px;
+    justify-content: center;
     margin-bottom: 20px;
     border-bottom: 1px solid #FFFFFF;
 
@@ -1524,8 +1589,6 @@ a {
 }
 
 .footer__section .input-group img {
-    position: absolute;
-    left: 5px;
     color: #FFFFFF;
     /* font-size: 18px; */
 }
@@ -1533,25 +1596,22 @@ a {
 .footer__section form input {
     flex: 1;
     /* Flex-grow for input */
-    padding: 10px 10px 10px 30px;
+    padding: 10px 10px 10px 0px;
     /* Input padding with space for icon */
     border: none;
     /* No border */
     border-radius: 3px;
     /* Rounded corners */
-    margin-right: 10px;
     /* Space to the right of input */
     background-color: #C31414;
     color: #FFFFFF;
-    margin-left: 7px;
-    margin-top: 4px;
     font-family: Manrope;
     font-size: 14px;
     font-weight: 400;
 }
 
 .footer__section form button {
-    padding: 10px 18px;
+    padding: 8px 12px 8px 16px;
     /* Button padding */
     background-color: #C31414;
     /* White background */
@@ -1567,14 +1627,18 @@ a {
     align-items: center;
     justify-content: center;
     font-size: 14px;
-    font-family: Manrope;
     font-weight: 700;
-    width: 160px;
-    height: 36px;
+    gap: 12px;
 }
 
-.footer__section form button img {
-    margin-left: 9px;
+.footer__section form button svg {
+    background: #fff;
+    border-radius: 50%;
+    padding: 2.5px;
+}
+
+.footer__section form button svg path {
+    fill: #C31414;
 }
 
 .footer__section form button:hover {
@@ -1597,10 +1661,10 @@ input:focus {
 }
 
 .footer__section p {
-    font-family: Manrope;
-    font-size: 14px;
-    font-weight: 300;
-    line-height: 1.2;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.91rem;
+    color: #fff;
 }
 
 .footer__section .title {
@@ -1616,7 +1680,6 @@ input:focus {
 .address {
     display: flex;
     align-items: center;
-    margin-bottom: 14px;
 
 }
 
@@ -1634,6 +1697,7 @@ input:focus {
     margin-top: -8px;
     cursor: pointer;
     margin-bottom: 12px;
+    margin-top: 8px;
 }
 
 .address2 {
@@ -1918,7 +1982,7 @@ button.show-modal,
     align-items: center;
     position: fixed;
     bottom: 100px;
-    right: -67px;
+    right: -108px;
     z-index: 999;
     transition: all 0.5s ease-in-out;
     background-color: transparent;
