--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -398,6 +398,10 @@
         padding: 0;
     }
 
+    .object__item:nth-child(3) {
+        width: 21.3%;
+    }
+
     .activity {
         padding: 56px 0;
     }
@@ -570,6 +574,10 @@
         flex-direction: column;
     }
 
+    .form__submit {
+        align-self: center;
+    }
+
     .footer__section .input-group {
         border: 1px solid #fff;
         border-radius: 40px;
@@ -663,12 +671,8 @@
 
     /*  */
     #popupbox {
-        border-radius: 16px 16px 0 0;
+        border-radius: 16px;
         max-width: none;
-    }
-
-    .form--popup.active #popupbox {
-        transform: translate(-50%, 15%) scale(1);
     }
 
     .popup__desc {
