--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1607,6 +1607,7 @@ a {
     align-items: center;
     gap: 12px;
     justify-content: center;
+    margin-bottom: 10px;
     border-bottom: 1px solid #FFFFFF;
 
 }
@@ -1623,7 +1624,7 @@ a {
 }
 
 .footer__submit {
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 .footer__section form input {
